--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,42 @@
 .navbar{
     position: absolute;
 }
+body{
+    transition: all .3s;
+}
+.preloader {
+    transition: all .3s;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    z-index: 9999;
+    background: url("../images/preloader.gif") center no-repeat #fbfbfb;
+}
+*{
+    transition: all .3s;
+}
+.w-80{
+    width: 80%;
+}
+.w-85{
+    width: 85%;
+}
+@font-face{
+    font-family: "Lato Light";
+    src: url(Lato-Light.ttf) format("truetype");
+}
+@font-face{
+    font-family: "Lato Regular";
+    src: url(Lato-Regular.ttf) format("truetype");
+}
+@font-face{
+    font-family: "GildaDisplay Regular";
+    src: url(GildaDisplay-Regular.ttf) format("truetype");
+}
+@font-face{
+    font-family: "Montserrat Bold";
+    src: url(Montserrat-Bold.ttf) format("truetype");
+}
+h1, h2, h3, h4, h5, h6{font-family: "GildaDisplay Regular";}
