--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,13 @@ h1, h2, h3, h4, h5, h6, p, a {font-family: "TitilliumWeb Regular";}
 .text-orange{
     color: #ed6f30;
 }
+.text-dar-biru{
+    color: #0e212d;
+}
 a:hover{
     text-decoration: none;
 }
+/* Components */
 /* Button and Links */
 .link-white-border{
     border: 2px solid #fff;
