--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .bg-home-top{
     background-image: url(../images/home-top-background-08.jpg);
-    background-size: 100%;
+    background-size: cover;
 }
 .navbar{
     position: absolute;
@@ -57,5 +57,5 @@ a:hover{
 }
 /* Pages */
 .home-about{
-    padding: 10rem;
+    padding: 10rem 0 20.2rem;
 }
