--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ a:hover{
 }
 /* Pages */
 .home-about{
-    padding: 10rem 0 20.2rem;
+    padding-top: 10rem;
+    height: 46.6rem;
 }
 .carousel-homebanner .home-caption .wrapper{
     position: absolute;
@@ -67,4 +68,11 @@ a:hover{
     position: absolute;
     bottom: 0;
     left: 0;
+    width: 300px;
+}
+.home-about .guy{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 400px;
 }
