--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ a:hover{
     background-image: url(../images/home-mid-background-08-01.jpg);
     background-size: cover;
     height: 1024px;
+		padding-top: 160px;
 }
 .home-mid-content .thumbnail .title{
 		position: absolute;
