--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a:hover{
 /* Button and Links */
 .link-white-border{
     border: 2px solid #fff;
-    padding: 15px 20px;
+    padding: 7px 18px;
     color: #fff;
 }
 .link-white-border:hover{
@@ -111,4 +111,11 @@ a:hover{
 }
 .bottom-content .news-section .img-content{
 	width: 100%;
+}
+.bottom-content .news-section .content-wrapper{
+	background-image: url(../images/content-highlight-wrapper.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 450px;
+	height: 284px;
 }
