--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,8 @@ a:hover{
 	padding-top: 12rem;
 
 }
+.about-top{
+    background-image: url(../images/about-top-header-04.jpg);
+    padding-top: 10rem;
+    padding-bottom: 5rem;  
+}
