--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ a:hover{
 }
 .about-mid{
     padding-top: 7rem;
+    padding-bottom: 12rem;
 }
 .about-mid .content-mid{
     position: absolute;
