--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,9 @@ a:hover{
 .about-mid .second-section{
     padding-top: 20rem;
 }
+.footer-content{
+    padding-top: 15rem;
+}
 .footer-content .number-counter{
-    font-size: 50px;
+    font-size: 60px;
 }
