--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ h1, h2, h3, h4, h5, h6, p, a {font-family: "TitilliumWeb Regular"; letter-spacin
 .text-dark-blue{
     color: #0e212d;
 }
+.text-blue{
+    color: #435e79;
+}
 .bg-dark-blue{
     background: #0e212d;
 }
