--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ a:hover{
     position: absolute;
     right: 0;
     top: 0;
-    width: 500px;
+    width: 50vw;
 }
 .about-mid .second-section{
     padding-top: 20rem;
