--- a/css/style.css
+++ b/css/style.css
@@ -403,3 +403,37 @@ a:hover{
     background-size: cover;
     padding: 5.5rem 5rem 6.5rem 2.5rem;
 }
+.busl-top{
+    background-image: url(../images/business-logistics-header-02.jpg);
+    padding-top: 12.4rem;
+    padding-bottom: 3rem;
+    background-size: 100%;
+}
+.busl-top .elements{
+    position: absolute;
+    top: 210px;
+    right: 0;
+    transform: translateY(-50%);
+    width: 10.9vw;
+}
+.busl-mid .first-section{
+    background-image: url(../images/business-logistics-header-03.jpg);
+    background-size: cover;
+    padding-top: 9rem;
+    padding-bottom: 9rem;
+}
+.detail-logistic{
+    background-image: url(../images/businesses-logistic-second-section-02.jpg);
+    background-size: cover;
+}
+.detail-logistic .first-section{
+    padding-top: 7.9rem;
+    padding-bottom: 7.9rem;
+}
+.detail-logistic .second-section{
+    padding-bottom: 24.2rem;
+    padding-top: 5rem;
+}
+.detail-logistic .second-section .col-lg-5{
+    margin-left: 45%;
+}
