--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,10 @@ a:hover{
     margin: auto;
     display: block;
 }
+.footer-details .fax-column{
+    border-left: 1px solid #666;
+    border-right: 1px solid #666;
+}
 .about-mid .second-section .owl-nav .owl-prev, .about-mid .second-section .owl-nav .owl-next{
     margin: 0;
 }
