--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@font-face{
+    font-family: "Roboto Light";
+    src: url(Roboto-Light.ttf) format("truetype");
+}
+@font-face{
+    font-family: "TitilliumWeb Regular";
+    src: url(TitilliumWeb-Regular.ttf) format("truetype");
+}
+@font-face{
+    font-family: "TitilliumWeb Italic Regular";
+    src: url(TitilliumWeb-ExtraLightItalic.ttf) format("truetype");
+}
 .bg-home-top{
     background-image: url(../images/home-top-background-08.jpg);
     background-size: cover;
@@ -9,12 +21,26 @@
 }
 .navbar-ansaf{
     position: absolute;
+    top: 20px;
+    padding-top: 10px;
 }
-.navbar ul li{
-    display: inline-block;
+.navbar-ansaf ul li{
+    display: inline;
+    margin: 0 10px;
 }
-.navbar .logo{
+.navbar-ansaf ul li a{
+    color: #666666;
+    font-family: "Roboto Light";
+}
+.navbar-ansaf .logo{
     width: 130px;
+}
+.navbar-ansaf .lang-ansaf .divider{
+    width: 1px;
+    height: 24px;
+    background-color: #666;
+    position: absolute;
+    top: 0;
 }
 body{
     transition: all .3s;
