--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,10 @@ a:hover{
 .link-gray-border:hover{
     color: #666666;
 }
+.link-blue-border{
+    color: #0e212d;
+    border: 2px solid #0e212d;
+}
 /* Pages */
 .home-about{
     padding-top: 10rem;
@@ -610,4 +614,16 @@ a:hover{
 }
 .contact-mid .content-wrapper{
     padding-top: 5rem;
+}
+.input-gray{
+    background-color: #f2f2f2;
+    border-radius: 0;
+    border: none;
+}
+.form-group.left-forms{
+    margin-top: 3.3rem;
+    margin-bottom: 3.3rem;
+}
+.section-forms-ansaf{
+    padding: 7rem 3rem;
 }
