--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    transition: all .3s;
+}
 @font-face{
     font-family: "Roboto Light";
     src: url(Roboto-Light.ttf) format("truetype");
@@ -24,11 +27,38 @@
     top: 20px;
     padding-top: 10px;
 }
+.navbar-ansaf > .row > .menu-wrap > ul{
+    text-align: right;
+}
 .navbar-ansaf > .row > .menu-wrap > ul > li, .navbar-ansaf > .row > .lang-ansaf > ul > li{
     display: inline;
-    margin: 0 10px;
     position: relative;
+    margin: 0 15px;
+    padding-bottom: 20px;
 }
+.navbar-ansaf > .row > .lang-ansaf > ul{
+    padding-left: 25px;
+}
+.navbar-ansaf > .row > .menu-wrap > ul > li > ul{
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    left: -50px;
+    top: 35px;
+    text-align: left;
+    list-style-type: none;
+    width: 180px;
+    height: auto;
+    background-color: #fff;
+    padding: 13px 20px;
+    transition: opacity 1s ease-in-out;
+}
+.navbar-ansaf > .row > .menu-wrap > ul > li:hover ul{
+    display: block;
+    visibility: visible;
+    opacity: 1;
+} 
 .navbar-ansaf ul li a{
     color: #666666;
     font-family: "Roboto Light";
