--- a/css/style.css
+++ b/css/style.css
@@ -191,10 +191,16 @@ a:hover{
 }
 .carousel-homebanner .owl-nav{
     position: absolute;
-    left: 28.7vw;
-    top: 48.7vh;
+    left: 28.2vw;
+    top: 50.3vh;
     z-index: 9;
     transform: translate(-50%);
+}
+.carousel-homebanner .slide-number{
+    position: absolute;
+    right: 5vw;
+    bottom: 5vw;
+    font-style: italic;
 }
 .bg-home-top .ornaments-blue{
     position: absolute;
