--- a/css/style.css
+++ b/css/style.css
@@ -758,3 +758,64 @@ a:hover{
 .section-forms-ansaf{
     padding: 7rem 3rem;
 }
+/* Button Animation */
+.carousel-homebanner .owl-nav .owl-next{
+    display:inline-block;
+    margin:0;
+}
+.carousel-homebanner .owl-nav button.owl-next::after{
+    display:block;
+    content: '';
+    border-bottom: solid 3px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+}
+.carousel-homebanner .owl-nav .owl-next::after{
+    transform-origin: 100% 50%;
+}
+.carousel-homebanner .owl-nav .owl-next:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
+
+.carousel-homebanner .owl-nav .owl-prev{
+    display:inline-block;
+    margin:0;
+}
+.carousel-homebanner .owl-nav button.owl-prev::after{
+    display:block;
+    content: '';
+    border-bottom: solid 3px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+}
+.carousel-homebanner .owl-nav .owl-prev::after{
+    transform-origin: 0% 50%;
+}
+.carousel-homebanner .owl-nav .owl-prev:hover::after{
+    transform: scaleX(1);
+    transform-origin: 100% 50%;
+}
+.link-white-border{
+    display:inline-block;
+    margin:0;
+}
+.link-white-border::after{
+    display:block;
+    content: '';
+    border-bottom: solid 3px #fff;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    margin-bottom: -7px;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-bottom: 3px;
+}
+.link-white-border::after{
+    transform-origin: 100% 50%;
+}
+.link-white-border:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
+
