--- a/css/style.css
+++ b/css/style.css
@@ -858,4 +858,48 @@ a:hover{
     transform: scaleX(1);
     transform-origin: 0% 50%;
 }
+.link-orange-border{
+    display:inline-block;
+    margin:0;
+}
+.link-orange-border::after{
+    display:block;
+    content: '';
+    border-bottom: solid 3px #ed6f30;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    margin-bottom: -7px;
+    margin-left: -17px;
+    margin-right: -17px;
+    padding-bottom: 3px;
+}
+.link-orange-border::after{
+    transform-origin: 100% 50%;
+}
+.link-orange-border:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
+.link-gray-border{
+    display:inline-block;
+    margin:0;
+}
+.link-gray-border::after{
+    display:block;
+    content: '';
+    border-bottom: solid 3px #666666;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+    margin-bottom: -7px;
+    margin-left: -17px;
+    margin-right: -17px;
+    padding-bottom: 3px;
+}
+.link-gray-border::after{
+    transform-origin: 100% 50%;
+}
+.link-gray-border:hover::after{
+    transform: scaleX(1);
+    transform-origin: 0% 50%;
+}
 
