--- a/css/style.css
+++ b/css/style.css
@@ -909,4 +909,43 @@ a:hover{
     transform: scaleX(1);
     transform-origin: 0% 50%;
 }
-
+@media screen and (max-width: 414px) {
+    h1, h2, h3, h4, h5, h6, p, a {
+        letter-spacing: 0.1px;
+    }
+    .bg-home-top .ornaments-blue {
+        right: 0;
+        top: auto;
+        width: 18.9vw;
+        z-index: 2;
+        bottom: -155px;
+    }
+    .carousel-homebanner .slide-number {
+        display: none;
+    }
+    .carousel-homebanner .wrapper{
+        position: absolute;
+        left: 0;
+        bottom: 2rem;
+    }
+    .home-about .guy {
+        right: -120px;
+        width: 200px;
+    }
+    .home-about .tractors {
+        left: -190px;
+        width: 200px;
+    }
+    .bg-home-top {
+        background-image: url(../images/home-top-background-mobile-15.jpg);
+        background-position: bottom;
+    }
+    .carousel-homebanner .owl-dots{
+        position: absolute;
+        left: 9%;
+        bottom: 10px;
+    }
+    .footer-details .logo {
+        width: 30%;
+    }
+}
